--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/swagger": "^11.0.2",
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
