--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/serve-static": "^5.0.1",
-    "@nestjs/swagger": "^11.0.2",
+    "@nestjs/serve-static": "~4.0.2",
+    "@nestjs/swagger": "~8.1.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
